crates/tests/fixtures/harness/data/error/special_with_args/input.rdl

#[win32]
mod Test {
    interface IFoo {
        #[special(42)]
        fn Method(&self);
    }
}
        